<?xml version="1.0"?>
<package format="2">
  <name>ros_zeromq_tutorial</name>
  <version>0.0.0</version>
  <description>The ros_zeromq_tutorial package</description>
  <author email="ravi2008joshi@gmail.com">Ravi Joshi</author>
  <maintainer email="ravi2008joshi@gmail.com">Ravi Joshi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export></export>
</package>